--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,26 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
 
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  equatable: ^2.0.5
+  path_provider: ^2.1.2
+  shared_preferences: ^2.2.2
+  flutter_bloc: ^8.1.4
+  uuid: ^4.0.0
+  flutter_secure_storage: ^8.0.0
+  crypto: ^3.0.2
+  bcrypt: ^1.1.3
+
+  # For simple local storage of user accounts (Hive)
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,15 +75,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
-
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
