--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
+  dio: ^5.4.0
 
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -46,6 +47,8 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   crypto: ^3.0.2
   bcrypt: ^1.1.3
+  image_picker: ^1.2.1
+  http: ^1.6.0
 
   # For simple local storage of user accounts (Hive)
 
@@ -55,6 +58,8 @@ dev_dependencies:
 
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
+  mocktail: ^1.0.3
+  dio: ^5.0.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
