--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   bcrypt: ^1.1.3
   image_picker: ^1.2.1
   http: ^1.6.0
+  provider: ^6.1.2
 
   # For simple local storage of user accounts (Hive)
 
