--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
   dio: ^5.4.0
+  sensors_plus: ^6.0.1
+  device_info_plus: ^11.1.0
+  proximity_sensor: ^1.3.0
 
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -60,7 +63,8 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
   mocktail: ^1.0.3
-  dio: ^5.0.0
+  network_image_mock: ^2.1.1
+  flutter_launcher_icons: ^0.13.1
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -84,7 +88,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-   
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
